# Gam-Native

./: .gitignore  CMakeLists.txt  Makefile  exports.h  imports.h  index.html  main.cpp  secondary.cpp
engine/inc/: Exports.h  Imports.h
engine/src/: Engine.cpp  Malloc.cpp  Malloc.h  Parser.cpp  Parser.h  Plant.cpp  Plant.h  Util.cpp  Util.h
shared/windows/: DeviceResources.cpp  DeviceResources.h  SceneRenderer.cpp  SceneRenderer.h
targets/web/: index.html
targets/win32/: main.cpp  pch.h
toolchain/: cl.bat  link.bat
toolchains/: web.cmake
toolchains/Platform/: Binaryen.cmake
toolchains/web/: cl.bat  link.bat
